--- a/index.css
+++ b/index.css
@@ -3,3 +3,11 @@ img {width: 300px}
 .question {color: red;}
 
 .answer {color: blueviolet;}
+
+.welcome {
+    height: 100px;
+    padding: 16px;
+    border: 4px solid red;
+    margin: 32px;
+
+}
